0.39 2017-3-22
  ---------------------------------------------------
  NOTE: This release add many DEPRECATED warnings.
  Maybe after these DEPRECATED, DBIx::Custom will be more stable.
  I think, in future small and fast will be better than keeping complexity.
  ---------------------------------------------------
  - DBIx::Custom::helper method is DEPRECATED!
  - DBIx::Custom AUTOLOAD feature is DEPRECATED!
  - DBIx::Custom::update_or_insert method is DEPRECATED!
  - DBIx::Custom::count method is DEPRECATED!
  - DBIx::Custom::insert, select,update,delete method's id option is DEPRECATED!
  - DBIx::Custom::insert, select,update,delete method's primary_key option is DEPRECATED!
  - DBIx::Custom::Model AUTOLOAD feature is DEPRECATED!
  - DBIx::Custom::Model::helper method is DEPRECATED!
  - DBIx::Custom::Model::update_or_insert method is DEPRECATED!
  - DBIx::Custom::Model::count is DEPRECATED!
  - DBIx::Custom::insert method which have array argument(For example, [{foo => 1, bar => 2}, {foo => 3, bar => 4}])
    become slow. (Performance down 1)
  - DBIx::Custom::execute method's reuse option become no more meaning. (Performance down 2)
  - add EXPERIMENTAL DBIx::Custom::execute query option again. This method return DBIx::Custom::Query object.
    If you use this option, you can resolve "Performance down 1" and "Performance down 2".
  - add EXPERIMENTAL DBIx::Custom::create_result method to create result class from statement handle
  - remove EXPERIMENTAL execute method's async option
  - remove EXPERIMENTAL async_conf attribute
    From this release, DBIx::Custom support only syncronous query,
    but from this release, you can create sql and bind values by excute method's query option
    you can pass sql and bind values to any asyncronous support database module,
    (for example, AnyEvent::DBI or Mojo::Pg)
  
0.38 2017-3-18
  ---------------------------------------------------
  NOTE: This release remove many DEPRECATED features. 